Fixed production CORS